flutter_lua_bridge/src/flutter_lua_bridge.h

/* ================================================================
 * C API 函数声明
 * ================================================================ */

typedef struct lua_State lua_State;
/* luaL_newmetatable */
int flutter_lua_bridgeL_newmetatable(lua_State* L, const char* tname);
/* luaL_newstate */
lua_State* flutter_lua_bridgeL_newstate(void);
/* luaL_openlibs */
void flutter_lua_bridgeL_openlibs(lua_State* L);
/* luaL_openselectedlibs */
void flutter_lua_bridgeL_openselectedlibs(lua_State* L, const char* libs);
/* luaL_opt - 已移除，因为它是宏定义 */

/* luaL_optinteger */
int64_t flutter_lua_bridgeL_optinteger(lua_State* L, int arg, int64_t d);
/* luaL_optlstring */
const char* flutter_lua_bridgeL_optlstring(lua_State* L, int arg, const char* d, size_t* l);
/* luaL_optnumber */
double flutter_lua_bridgeL_optnumber(lua_State* L, int arg, double d);
/* luaL_optstring */
const char* flutter_lua_bridgeL_optstring(lua_State* L, int arg, const char* d);
/* luaL_prepbuffer */
char* flutter_lua_bridgeL_prepbuffer(void* B);
/* luaL_prepbuffsize */
char* flutter_lua_bridgeL_prepbuffsize(void* B, size_t sz);
/* luaL_pushfail */
void flutter_lua_bridgeL_pushfail(lua_State* L);
/* luaL_pushresult */
void flutter_lua_bridgeL_pushresult(void* B);
/* luaL_pushresultsize */
void flutter_lua_bridgeL_pushresultsize(void* B, size_t sz);
/* luaL_ref */
int flutter_lua_bridgeL_ref(lua_State* L, int t);
/* luaL_requiref */
void flutter_lua_bridgeL_requiref(lua_State* L, const char* modname, void* openf, int glb);
/* luaL_setfuncs */
void flutter_lua_bridgeL_setfuncs(lua_State* L, void* l, int nup);
/* luaL_setmetatable */
void flutter_lua_bridgeL_setmetatable(lua_State* L, const char* tname);
/* luaL_testudata */
void* flutter_lua_bridgeL_testudata(lua_State* L, int ud, const char* tname);
/* luaL_tolstring */
const char* flutter_lua_bridgeL_tolstring(lua_State* L, int idx, size_t* len);
/* luaL_traceback */
void flutter_lua_bridgeL_traceback(lua_State* L, lua_State* L1, const char* msg, int level);
/* luaL_typeerror */
int flutter_lua_bridgeL_typeerror(lua_State* L, int arg, const char* tname);
/* luaL_typename */
const char* flutter_lua_bridgeL_typename(lua_State* L, int idx);
/* luaL_unref */
void flutter_lua_bridgeL_unref(lua_State* L, int t, int ref);
/* luaL_where */
void flutter_lua_bridgeL_where(lua_State* L, int lvl);