flutter_lua_bridge/lib/src/gen/flutter_lua_bridge.g.dart


/// luaL_newmetatable
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)>()
external int flutter_lua_bridgeL_newmetatable(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> tname,
);

/// luaL_newstate
@ffi.Native<ffi.Pointer<lua_State> Function()>()
external ffi.Pointer<lua_State> flutter_lua_bridgeL_newstate();

/// luaL_openlibs
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>)>()
external void flutter_lua_bridgeL_openlibs(ffi.Pointer<lua_State> L);

/// luaL_openselectedlibs
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)>()
external void flutter_lua_bridgeL_openselectedlibs(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> libs,
);

/// luaL_optinteger
@ffi.Native<ffi.Int64 Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int64)>()
external int flutter_lua_bridgeL_optinteger(
  ffi.Pointer<lua_State> L,
  int arg,
  int d,
);

/// luaL_optlstring
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<lua_State>,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Size>,
  )
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridgeL_optlstring(
  ffi.Pointer<lua_State> L,
  int arg,
  ffi.Pointer<ffi.Char> d,
  ffi.Pointer<ffi.Size> l,
);

/// luaL_optnumber
@ffi.Native<ffi.Double Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Double)>()
external double flutter_lua_bridgeL_optnumber(
  ffi.Pointer<lua_State> L,
  int arg,
  double d,
);

/// luaL_optstring
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<lua_State>,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridgeL_optstring(
  ffi.Pointer<lua_State> L,
  int arg,
  ffi.Pointer<ffi.Char> d,
);

/// luaL_prepbuffer
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>()
external ffi.Pointer<ffi.Char> flutter_lua_bridgeL_prepbuffer(
  ffi.Pointer<ffi.Void> B,
);

/// luaL_prepbuffsize
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, ffi.Size)>()
external ffi.Pointer<ffi.Char> flutter_lua_bridgeL_prepbuffsize(
  ffi.Pointer<ffi.Void> B,
  int sz,
);

/// luaL_pushfail
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>)>()
external void flutter_lua_bridgeL_pushfail(ffi.Pointer<lua_State> L);

/// luaL_pushresult
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void flutter_lua_bridgeL_pushresult(ffi.Pointer<ffi.Void> B);

/// luaL_pushresultsize
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Size)>()
external void flutter_lua_bridgeL_pushresultsize(
  ffi.Pointer<ffi.Void> B,
  int sz,
);

/// luaL_ref
@ffi.Native<ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int)>()
external int flutter_lua_bridgeL_ref(ffi.Pointer<lua_State> L, int t);

/// luaL_requiref
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Void>,
    ffi.Int,
  )
>()
external void flutter_lua_bridgeL_requiref(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> modname,
  ffi.Pointer<ffi.Void> openf,
  int glb,
);

/// luaL_setfuncs
@ffi.Native<
  ffi.Void Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Void>, ffi.Int)
>()
external void flutter_lua_bridgeL_setfuncs(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Void> l,
  int nup,
);

/// luaL_setmetatable
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Pointer<ffi.Char>)>()
external void flutter_lua_bridgeL_setmetatable(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<ffi.Char> tname,
);

/// luaL_testudata
@ffi.Native<
  ffi.Pointer<ffi.Void> Function(
    ffi.Pointer<lua_State>,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<ffi.Void> flutter_lua_bridgeL_testudata(
  ffi.Pointer<lua_State> L,
  int ud,
  ffi.Pointer<ffi.Char> tname,
);

/// luaL_tolstring
@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<lua_State>,
    ffi.Int,
    ffi.Pointer<ffi.Size>,
  )
>()
external ffi.Pointer<ffi.Char> flutter_lua_bridgeL_tolstring(
  ffi.Pointer<lua_State> L,
  int idx,
  ffi.Pointer<ffi.Size> len,
);

/// luaL_traceback
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<lua_State>,
    ffi.Pointer<lua_State>,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
  )
>()
external void flutter_lua_bridgeL_traceback(
  ffi.Pointer<lua_State> L,
  ffi.Pointer<lua_State> L1,
  ffi.Pointer<ffi.Char> msg,
  int level,
);

/// luaL_typeerror
@ffi.Native<
  ffi.Int Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Pointer<ffi.Char>)
>()
external int flutter_lua_bridgeL_typeerror(
  ffi.Pointer<lua_State> L,
  int arg,
  ffi.Pointer<ffi.Char> tname,
);

/// luaL_typename
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<lua_State>, ffi.Int)>()
external ffi.Pointer<ffi.Char> flutter_lua_bridgeL_typename(
  ffi.Pointer<lua_State> L,
  int idx,
);

/// luaL_unref
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int, ffi.Int)>()
external void flutter_lua_bridgeL_unref(
  ffi.Pointer<lua_State> L,
  int t,
  int ref,
);

/// luaL_where
@ffi.Native<ffi.Void Function(ffi.Pointer<lua_State>, ffi.Int)>()
external void flutter_lua_bridgeL_where(ffi.Pointer<lua_State> L, int lvl);

typedef __int8_t = ffi.SignedChar;
typedef Dart__int8_t = int;
typedef __uint8_t = ffi.UnsignedChar;
typedef Dart__uint8_t = int;
typedef __int16_t = ffi.Short;
typedef Dart__int16_t = int;
typedef __uint16_t = ffi.UnsignedShort;
typedef Dart__uint16_t = int;
typedef __int32_t = ffi.Int;
typedef Dart__int32_t = int;
typedef __uint32_t = ffi.UnsignedInt;
typedef Dart__uint32_t = int;
typedef __int64_t = ffi.LongLong;
typedef Dart__int64_t = int;
typedef __uint64_t = ffi.UnsignedLongLong;
typedef Dart__uint64_t = int;
typedef __darwin_intptr_t = ffi.Long;
typedef Dart__darwin_intptr_t = int;
typedef __darwin_natural_t = ffi.UnsignedInt;
typedef Dart__darwin_natural_t = int;

/// The rune type below is declared to be an ``int'' instead of the more natural
/// ``unsigned long'' or ``long''.  Two things are happening here.  It is not
/// unsigned so that EOF (-1) can be naturally assigned to it and used.  Also,
/// it looks like 10646 will be a 31 bit standard.  This means that if your
/// ints cannot hold 32 bits, you will be in trouble.  The reason an int was
/// chosen over a long is that the is*() and to*() routines take ints (says
/// ANSI C), but they use __darwin_ct_rune_t instead of int.  By changing it
/// here, you lose a bit of ANSI conformance, but your programs will still
/// work.
///
/// NOTE: rune_t is not covered by ANSI nor other standards, and should not
/// be instantiated outside of lib/libc/locale.  Use wchar_t.  wchar_t and
/// rune_t must be the same type.  Also wint_t must be no narrower than
/// wchar_t, and should also be able to hold all members of the largest
/// character set plus one extra value (WEOF). wint_t must be at least 16 bits.
typedef __darwin_ct_rune_t = ffi.Int;
typedef Dart__darwin_ct_rune_t = int;

/// mbstate_t is an opaque object to keep conversion state, during multibyte
/// stream conversions.  The content must not be referenced by user programs.
final class __mbstate_t extends ffi.Opaque {}

typedef __darwin_mbstate_t = __mbstate_t;
typedef __darwin_ptrdiff_t = ffi.Long;
typedef Dart__darwin_ptrdiff_t = int;
typedef __darwin_size_t = ffi.UnsignedLong;
typedef Dart__darwin_size_t = int;
typedef __builtin_va_list = ffi.Pointer<ffi.Char>;
typedef __darwin_va_list = __builtin_va_list;
typedef __darwin_wchar_t = ffi.Int;
typedef Dart__darwin_wchar_t = int;
typedef __darwin_rune_t = __darwin_wchar_t;
typedef __darwin_wint_t = ffi.Int;
typedef Dart__darwin_wint_t = int;
typedef __darwin_clock_t = ffi.UnsignedLong;
typedef Dart__darwin_clock_t = int;
typedef __darwin_socklen_t = __uint32_t;
typedef __darwin_ssize_t = ffi.Long;
typedef Dart__darwin_ssize_t = int;
typedef __darwin_time_t = ffi.Long;
typedef Dart__darwin_time_t = int;
typedef __darwin_blkcnt_t = __int64_t;
typedef __darwin_blksize_t = __int32_t;
typedef __darwin_dev_t = __int32_t;
typedef __darwin_fsblkcnt_t = ffi.UnsignedInt;
typedef Dart__darwin_fsblkcnt_t = int;
typedef __darwin_fsfilcnt_t = ffi.UnsignedInt;
typedef Dart__darwin_fsfilcnt_t = int;
typedef __darwin_gid_t = __uint32_t;
typedef __darwin_id_t = __uint32_t;
typedef __darwin_ino64_t = __uint64_t;
typedef __darwin_ino_t = __darwin_ino64_t;
typedef __darwin_mach_port_name_t = __darwin_natural_t;
typedef __darwin_mach_port_t = __darwin_mach_port_name_t;
typedef __darwin_mode_t = __uint16_t;
typedef __darwin_off_t = __int64_t;
typedef __darwin_pid_t = __int32_t;
typedef __darwin_sigset_t = __uint32_t;
typedef __darwin_suseconds_t = __int32_t;
typedef __darwin_uid_t = __uint32_t;
typedef __darwin_useconds_t = __uint32_t;

final class __darwin_pthread_handler_rec extends ffi.Struct {
  /// Routine to call
  external ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>
  >
  __routine;

  /// Argument to pass
  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Char> __opaque;
}
